--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,26 +1,20 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
- "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
+  <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
   <title>Narrative on Young American Farmers</title>
-  <%= stylesheet_link_tag 'reset-fonts-grids', :cache => true %>
-	<%= javascript_include_tag :defaults, :cache => true %>
+  <%# stylesheet_link_tag 'reset-fonts-grids' %>
+  <%= stylesheet_link_tag 'screen' %>
+  <%= javascript_include_tag :defaults %>
 </head>
 <body>
-<div id="doc2" class="yui-t7">
-  <div id="hd"> <h1>Narrative on Young American Farmers<h1> </div>
-  <div id="bd">
-    <div class="yui-g navigation">
-      <a href="/">Home</a> |
-      <a href="/directory">Directory</a> |
-      <a href="/logout">Logout</a>
-    </div>
 
-    <div class="yui-gc">
-      <div class="yui-u first"> <%= yield %> </div>
-      <div class="yui-u"> <div class ='sidebar'> <%= yield :sidebar %> </div> </div>
-    </div>
-    <div id="ft"> </div>
+<div id="content">
+  <p style="color: red"><%= flash[:error] %></p>
+  <%= yield  %>
 </div>
+
 </body>
 </html>
