redirected to appropriate stage based on the button; last form sends to stages_url

--- a/app/views/stages/_header.html.erb
+++ b/app/views/stages/_header.html.erb
@@ -1,9 +1,5 @@
 <%= complex_bar_graph [progress_bar(stage)] %>
-
 <br/>
 <br/>
 <br/>
-
-<h2>
-<%= stage.title %>
-</h2>
+<h2><%= stage.title %></h2>
