--- a/app/views/stages/_question.html.erb
+++ b/app/views/stages/_question.html.erb
@@ -12,7 +12,7 @@
   	<%= text_area_tag "answer_#{question.id}" %><br />		
 	<% elsif question.qtype == "yes_no" %>
 		<%= radio_button "answer_#{question.id}", "", "" %> <%= image_tag("/images/labels/yes.png", :alt => "Yes") %><br />
-		<%= radio_button "answer_#{question.id}", "", "" %> <%= image_tag("/images/labels/No.png", :alt => "No") %><br />
+		<%= radio_button "answer_#{question.id}", "", "" %> <%= image_tag("/images/labels/no.png", :alt => "No") %><br />
 	<% elsif question.qtype == "options" %>
 		<%- labels_images = find_lables_and_images(question) -%>
 		<%- labels_images.each do |label_image| -%>
