--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -1,3 +1,5 @@
 <h1>Narrative on Young American Farmers</h1>
+
 <p><%= link_to "Take the census", stages_path %></p>
 
+<p><%= link_to "Nominate a farmer", '/nominate' %></p>
