added the %age completed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 
 <div id="content">
   <p style="color: red"><%= flash[:error] %></p>
+  <p style="color: green"><%= flash[:notice] %></p>
   <%= yield  %>
 </div>
 
