--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <title>Narrative on Young American Farmers</title>
   <%# stylesheet_link_tag 'reset-fonts-grids' %>
   <%= stylesheet_link_tag 'screen' %>
+  <%= GMap.header %>
+  <%# javascript_include_tag("markerGroup") %>
   <%= javascript_include_tag :defaults %>
 </head>
 <body>
