--- a/app/views/stages/_answer.html.erb
+++ b/app/views/stages/_answer.html.erb
@@ -2,7 +2,7 @@
 	<%= h answer.question.text %> 
 
   <%- if answer.question.qtype == "text_field" or answer.question.qtype == "text_area" -%>
-    <br/><%= answer_form.send("#{answer.question.qtype}", :text, :rows => 3) %>
+    <br/><%= answer_form.send("#{answer.question.qtype}", :text, :id => "#{answer.question.text}", :rows => 3) %>
   <%- elsif answer.question.qtype == "list"  -%>
     <%- for option in answer.question.options -%>
 			<br/> <%= check_box_tag "survey[answer_attributes][#{answer.id}][option_ids][]", option.id, answer.options.include?(option) %> <%= "#{option.text}" %> 
