--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -6,9 +6,9 @@
 <% if session[:current_survey].nil? %>
 	<p><%= link_to "Take the census", stages_path %></p>
 <% else %>	
-	<p><%= link_to "Survey in progress... please continue", stages_path %></p>
+	<p>Survey in progress... <%= link_to "please continue", stages_path %></p>
 <% end %>
 
-<p><%= link_to "Nominate a farmer", '/nominate' %></p>
+<p><%= link_to "Nominate a farmer", new_nomination_path %></p>
 
 <div id="mainmap"><%= @map.div :width => 600, :height => 400 -%></div>
