--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,9 +1,11 @@
 body { background-color:#F1F7D4;}
 #doc2 { background-color: #FFF;}
-#hd, #ft { background-color : #7F007F; color: #FFF; height:70px; border: 1px solid #000}
+#hd, #ft { background-color : #FFF; color: #FFF; height:100px; border:none; }
 #hd h1 { font-size: 210%; padding: 10px;}
-.navigation { background-color: #000; color: #FFF; padding: 5px;} 
-.navigation a { text-decoration:none; color: #FFF; padding: 5px;} }
+#hd img {vertical-align:middle;} /* added */
+
+.navigation { background-color: #FFF; color: #000; padding: 5px;} 
+.navigation a { text-decoration:none; color: #666; padding: 5px;} }
 #bd { border: 2px solid #000;}
 p.thumb { margin: 0 0 10px 0; padding: 0; text-align: center; line-height: 1em; list-style: none; }	
 p.thumb a { display: block; margin: 0; padding: 4px 4px 9px 4px; border: 1px solid #ccc; border-top-color: #eee; border-right-color: #ddd;
@@ -25,9 +27,9 @@ h1.section_header { padding-top: 5px; padding-bottom: 5px; padding-left: 20px; f
 					background-image: url(/images/gradient.jpg); background-repeat: no-repeat;
 					color: white; width: 100%; 	font-family:  Calibri, Helvetica, Arial, sans-serif;
    					text-transform:  capitalize; margin-top: .6px;}
-.sidebar  {  border: 1px solid #000; background-color: #F5D6F5;}
+.sidebar  {  border: 1px dashed #666; background-color: #F5D6F5; padding:10px;}
 .sidebar h1.section_header { background-image: url(/images/sidebar_gradient.jpg); background-repeat: no-repeat; }
-.sidebar p { font-family: Constantia, Georgia, "Times New Roman", serif; margin: 0 auto; line-height:  1.4; font-size:  122%; width:  75%; padding: 3px; }
+.sidebar p { font-family: Constantia, Georgia, "Times New Roman", serif; margin: 0 auto; line-height:  1.4; font-size:  95%; padding: 1px; }
 form { margin: 0 auto; line-height:  1.4; font-size:  122%; width:  75%; padding: 0 5px 0 5px; }
 form label { font-family: Constantia, Georgia, "Times New Roman", serif; }
 #content { width: 500px; }
@@ -83,3 +85,7 @@ div.directory span.current { padding: 2px; margin: 10px 1.5px 1.5px 1.5px; borde
 .userImage img { display: inline; height: 100%;}
 .userInfo { margin-left: 140px;}
 .userActions {}
+.footer { color:#666;}
+
+#map_div{ width:700px; height:420px; }
+.first { padding-left:10px;}
