--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,11 @@
 <head>
   <title>Narrative on Young American Farmers - <%= yield(:title) || "Greenhorns" %></title>
   <%= stylesheet_link_tag 'reset-fonts-grids', :cache => true %>
-	<%= stylesheet_link_tag 'styles', :cache => true %>			
+	<%= stylesheet_link_tag 'styles' %>			
 	<%= javascript_include_tag :defaults, :cache => true %>
 </head>
 <body>
-<div id="doc2" class="yui-t5">
+<div id="doc4" class="yui-t3">
 
   <div id="hd" class="header">
 		<h1><%= link_to image_tag("/images/text/Narrative_on_Young_American_Farmers.gif",
@@ -36,7 +36,7 @@
 									:mouseover => "/images/text/Sponsors_mouseover.png"), static_path("sponsors") %>									
     </div> <!-- yui-g navigation end -->
 
-    <div class="yui-ge main">
+    <div class="yui-ge">
 
       <div class="yui-u first">
 			  <p style="color: red"><%= flash[:error] %></p>
@@ -52,14 +52,15 @@
 				</div> <!-- sidebar end -->
 			</div> <!-- yui-u second -->
 			
-    </div>  <!-- yui-g main -->
+    </div>  <!-- yui-gc -->
 
+	  <div id="ft"> 
+			<div class="yui-g footer">
+	    	footer blah blah .... 
+			</div>
+		</div> <!-- ft end -->
+		
  	</div> <!-- bd end -->     
-  <div id="ft"> 
-		<div class="yui-g footer">
-    	footer blah blah .... 
-		</div>
-	</div> <!-- ft end -->  
 
 </div> <!-- doc2 end -->
 </body>
