--- a/app/views/layouts/yui_application.html.erb
+++ b/app/views/layouts/yui_application.html.erb
@@ -4,28 +4,37 @@
 <head>
   <title>Narrative on Young American Farmers - <%= yield(:title) || "Greenhorns" %></title>
   <%= stylesheet_link_tag 'reset-fonts-grids', :cache => true %>
-	<%= stylesheet_link_tag 'screen', :cache => true %>			
+	<%= stylesheet_link_tag 'screen' %>			
 	<%= javascript_include_tag :defaults, :cache => true %>
 </head>
 <body>
-<div id="doc2" class="yui-t7">
-  <div id="hd"> <h1>Narrative on Young American Farmers<h1> </div>
-  <div id="bd">
-    <div class="yui-g navigation">
-      <a href="/">Home</a> |
-      <a href="/directory">Directory</a> |
-      <a href="/logout">Logout</a>
-    </div>
+	<div id="doc2" class="yui-t7">
+	  <div id="hd"> 
+			<h1>Narrative on Young American Farmers<h1> 
+		</div>
+  
+		<div id="bd">
+	    <div class="yui-g navigation">
+	      <a href="/">Home</a> |
+	      <a href="/directory">Directory</a> |
+	      <a href="/logout">Logout</a>
+	    </div>
 
-    <div class="yui-gc">
-      <div class="yui-u first">
-			  <p style="color: red"><%= flash[:error] %></p>
-			  <p style="color: green"><%= flash[:notice] %></p>
-	 			<%= yield %> 
-			</div>
-      <div class="yui-u"> <div class ='sidebar'> <%= yield :sidebar %> </div> </div>
-    </div>
-    <div id="ft"> </div>
-</div>
+	    <div class="yui-gc">
+	      <div class="yui-u first">
+				  <p style="color: red"><%= flash[:error] %></p>
+				  <p style="color: green"><%= flash[:notice] %></p>
+		 			<%= yield %> 
+				</div>
+	      <div class="yui-u"> 
+					<div class ='sidebar'> <%= yield :sidebar %> </div> 
+				</div>
+	    </div>   
+		</div>
+	
+		<div id="ft"> 
+			Footer...
+		</div>   
+	</div> 
 </body>
 </html>
