--- a/app/views/nominations/new.html.erb
+++ b/app/views/nominations/new.html.erb
@@ -4,7 +4,7 @@
   <%= f.error_messages %>
 
   <p>
-    <%= f.label image_tag("/images/labels/name.png") %><br />
+    <%= image_label "name" %><br />
     <%= f.text_field :full_name %>     
   </p>
   <p>
@@ -32,23 +32,23 @@
     <%= f.text_field :date_of_birth_str %>
   </p>
   <p>
-    <%= image_label :nominees_profile %><br />
+    <%= image_label "Nominees_profile" %><br />
     <%= f.text_area :nominees_profile %>
   </p>
   <p>
-    <%= image_label :nominees_contributions %><br />
+    <%= image_label "Nominees_contributions" %><br />
     <%= f.text_area :nominees_contributions %>
   </p>
   <p>
-    <%= image_label :your_name %><br />
+    <%= image_label "Your_name" %><br />
     <%= f.text_field :your_name %>
   </p>
   <p>
-    <%= image_label :your_email %><br />
+    <%= image_label "Your_email" %><br />
     <%= f.text_field :your_email %>
   </p>
   <p>
-    <%= image_label :your_contact_details %><br />
+    <%= image_label "Your_contact_details" %><br />
     <%= f.text_field :your_contact_details %>
   </p>
   <p>
