removed copyright/logo from the map

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,8 +4,9 @@
 <head>
   <title>Narrative on Young American Farmers - <%= yield(:title) || "Greenhorns" %></title>
   <%= stylesheet_link_tag 'reset-fonts-grids', :cache => true %>
-	<%= stylesheet_link_tag 'styles' %>			
+	<%= stylesheet_link_tag 'styles', :cache => true %>			
 	<%= javascript_include_tag :defaults, :cache => true %>
+	<%= yield(:head) %>
 </head>
 <body>
 <div id="doc4" class="yui-t3">
@@ -14,7 +15,9 @@
 		<h1><%= link_to image_tag("/images/text/Narrative_on_Young_American_Farmers.gif",
 						:title => "Narrative on Young American Farmers", 
 						:id =>"Narrative_on_Young_American_Farmers", 
-						:alt => "Narrative on Young American Farmers"), home_path %> <%= image_tag("/images/farm_tools_small.png") %> </h1> 
+						:alt => "Narrative on Young American Farmers"), home_path %> 
+						<%= image_tag("/images/farm_tools_small.png") %> </h1>  
+	  <%= image_tag("hr_gray_875x25.png") %>
 	</div> <!-- hd end -->
 
   <div id="bd">
@@ -46,9 +49,7 @@
 			
       <div class="yui-u"> 
 				<div class ='sidebar'>
-					<h1>The Project</h1>
-					<p>Here is some dummy text. To be removed upon completion. if you know of a map that provides compelling information- we'd love to put it up. Please email severine@pixiepoppins.org amtrak routes. Other tabs at the top of the SERVE YOUR COUNTRY FOOD website brooke will hopefully conceive of the visual  access to these links.I like the scrolls, and dandilion seeds floating. and the tools the tools are great anything after-- means that its a click away once you get into that tab links about this survey about the greenhorns--link to website www.thegreenhorns.net STOP PRESS -profiles of young farmers--press release link to blog -- www.thegreenhorns.wordpress.com ( The Irresistible fleet of bicycles)-- and our blogroll of other blogs map of the united states of American farmers young farmer resources to download---greenhorns guidebook pdf.</p> <p>(i'll get others for this page)--the long list of online films link to wiki--foryoungfarmers.wikispaces.com young farmer events sage advice of the week from greyhairs to greenhorns-- I'd like to be able to post these up every week --directives and wisdoms from old farmers to new ones. paraphenalia donate to The Greenhorns size of credit card-- this site made possible by ORGANIC VALLEY --a stitched border for their logo. similar site for reference. http://www.plunkett.co.uk/</p>
-					<%= yield :sidebar %> 
+					<%= yield( :sidebar ) || render(:partial => "/layouts/default_sidebar_content")%> 
 				</div> <!-- sidebar end -->
 			</div> <!-- yui-u second -->
 			
