--- a/app/views/nominations/new.html.erb
+++ b/app/views/nominations/new.html.erb
@@ -40,6 +40,7 @@
     <%= f.text_area :nominees_contributions %>
   </p>
   <p>
+		<%= image_tag("hr430x25.png") %><br/>	
     <%= image_label "Your_name" %><br />
     <%= f.text_field :your_name %>
   </p>
@@ -52,6 +53,7 @@
     <%= f.text_field :your_contact_details %>
   </p>
   <p>
+		<%= image_tag("hr430x25_2.png") %><br/>	
     <%= image_submit_tag("labels/Nominate.png") %>
   </p>
 <% end %>
