--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,24 +1,10 @@
-<h1>Listing pages</h1>
-
-<table>
-  <tr>
-    <th>Name</th>
-    <th>Permalink</th>
-    <th>Content</th>
-  </tr>
+<%= link_to 'New page', new_page_path %> <br/><br/>  
 
 <% for page in @pages %>
-  <tr>
-    <td><%=h page.name %></td>
-    <td><%=h page.permalink %></td>
-    <td><%=h page.content %></td>
-    <td><%= link_to 'Show', page %></td>
-    <td><%= link_to 'Edit', edit_page_path(page) %></td>
-    <td><%= link_to 'Destroy', page, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
+	Page Name: <%=h page.name %> <br/>
+	Permalink: <%=h page.permalink %> <br/>
+	Content: <%=h truncate(page.content, 100, "...") %> <br/>
+  <%= link_to 'Show', page %> | 
+	<%= link_to 'Edit', edit_page_path(page) %> | 
+	<%= link_to 'Destroy', page, :confirm => 'Are you sure?', :method => :delete %> <hr/>
 <% end %>
-</table>
-
-<br />
-
-<%= link_to 'New page', new_page_path %>
