removed copyright/logo from the map

--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -25,4 +25,4 @@
 	:id =>"Nominate_a_Farmer", 
  	:mouseover => "/images/text/Nominate_a_Farmer_mouseover.png" ), new_nomination_path %></p>
 
-<div id="mainmap"><%= @map.div -%></div>
+<div id="mainmap"><%= @map.div :width => 700, :height => 420 -%></div>
