--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
   <%= stylesheet_link_tag 'reset-fonts-grids', :cache => true %>
 	<%= stylesheet_link_tag 'styles', :cache => true %>			
 	<%= javascript_include_tag :defaults, :cache => true %>
-	<%= yield(:head) %>
+	<%# yield(:head) %>
 </head>
 <body>
 <div id="doc4" class="yui-t3">
