--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,10 +3,10 @@
 <html>
 <head>
   <title>Narrative on Young American Farmers - <%= yield(:title) || "Greenhorns" %></title>
-  <%= stylesheet_link_tag 'reset-fonts-grids', :cache => true %>
-	<%= stylesheet_link_tag 'styles', :cache => true %>			
-	<%= javascript_include_tag :defaults, :cache => true %>
-	<%# yield(:head) %>
+  <%= stylesheet_link_tag 'reset-fonts-grids' %>
+	<%= stylesheet_link_tag 'styles' %>			
+	<%= javascript_include_tag :defaults %>
+	<%= yield(:head) %>
 </head>
 <body>
 <div id="doc4" class="yui-t3">
