added hand print icons

--- a/app/views/stages/_address.html.erb
+++ b/app/views/stages/_address.html.erb
@@ -5,7 +5,8 @@
 <script type="text/javascript" charset="utf-8">   
 
 	// Create a standard icon TODO: get the fingure print graphic from Serverine
-	var icon_standard = addOptionsToIcon(new GIcon(),{shadowSize : new GSize(37,34),iconAnchor : new GPoint(9,34),infoWindowAnchor : new GPoint(9,2),infoShadowAnchor : new GPoint(18,25),shadow : "/images/shadow50.png",image : "/images/marker.png",iconSize : new GSize(20,34)});
+	//var icon_standard = addOptionsToIcon(new GIcon(),{shadowSize : new GSize(37,34),iconAnchor : new GPoint(9,34),infoWindowAnchor : new GPoint(9,2),infoShadowAnchor : new GPoint(18,25),shadow : "/images/shadow50.png",image : "/images/marker.png",iconSize : new GSize(20,34)});
+	var icon_standard = create_icon();
 
 	var map;
 	window.onload = addCodeToFunction(window.onload,function() {
