--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -4,5 +4,7 @@
 
 <%= textilize h(@page.content) %>
 
-<%= link_to 'Edit', edit_page_path(@page) %> |
-<%= link_to 'Back', pages_path %>
+<%- if admin? -%>
+	<%= link_to 'Edit', edit_page_path(@page) %> |
+	<%= link_to 'Back', pages_path %>
+<%- end -%>
